@@ -57,45 +57,3 @@ function workflowfield_field_widget_form(&$form, &$form_state, $field, $instance
 
   return $element;
 }
-
-/**
- * Implements hook_field_widget_form_alter().
- * 
- * Sets the default value for a workflow_field options widget.
- * This is normally OK for 'node edit', but not for 'node add' and 'comment form'.
- */
-function workflowfield_field_widget_form_alter(&$element, &$form_state, $context) {
-  if ($context['field']['type'] == 'workflow') {
-    if (isset($form_state['node'])) {
-      $entity = $form_state['node'];
-      $entity_type = 'node'; // comments are only supported on nodes.
-    }
-    else {
-      $entity = $element['#entity'];
-      $entity_type = $element['#entity_type'];
-    }
-
-    if (!$entity) {
-      // We are now on the Field settings page, so do nothing.
-      return;
-    }
-
-    $field = $context['field'];
-    $field_name = $context['field']['field_name'];
-    if ($entity_type == 'comment') {
-      $entity_type = 'node'; // @todo: Comments are only possible on nodes?
-      $entity = $context['form']['#node'];
-    }
-    $current_sid = workflow_node_current_state($entity, $entity_type, $field_name);
-
-    $element['#default_value'] = $current_sid;
-  }
-}
-
-/**
- * Submit callback function for the DefaultWidget.
- *
- * This is not used. Use workflow_save_transition() instead.
- */
-//function workflowfield_field_widget_form_submit($form, &$form_state) {
-//}
